--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Hello. My name is Austin Harvey. I am a senior at Grand Canyon University and I am a .Net Developer for Deft Flux. I love to play video games nad hangout with my friends on the weekend!
-the "new" and the "new.pub" are the SSH key to connect to my github.
+Hello. My name is Austin Harvey. I am a senior at Grand Canyon University and I am a .Net Developer for Deft Flux. I love to play video games and hangout with my friends on the weekend!
+the "new" and the "new.pub" are the generated SSH key in Assignment1 folder to connect to my github.
